--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes">
   </head>
   <body>
-<<<<<<< HEAD
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-=======
     <div id="unity-container" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
       <canvas id="unity-canvas" style="position: absolute;" tabindex="-1"></canvas>
->>>>>>> 99d9e0e5254f2fefbfc55f64cc12210c760cb326
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
+        <div id="unity-logo" style="position: absolute; bottom: 10px; left: 10px; width: 48px; height: 48px;"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
@@ -66,46 +61,6 @@
         showBanner: unityShowBanner,
       };
 
-<<<<<<< HEAD
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        document.querySelector("#unity-container").className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      document.querySelector("#unity-loading-bar").style.display = "block";
-=======
       // Přizpůsobení pro mobilní zařízení
       function adjustCanvasForMobile() {
         if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -131,7 +86,6 @@
 
       window.addEventListener("resize", adjustCanvasForMobile);
       adjustCanvasForMobile(); // Inicializace při načtení
->>>>>>> 99d9e0e5254f2fefbfc55f64cc12210c760cb326
 
       var script = document.createElement("script");
       script.src = loaderUrl;
